--- a/2ndProj/app/build.gradle
+++ b/2ndProj/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     //slidinguppannel
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
 
+    //circle image view
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
