--- a/2ndProj/app/src/main/AndroidManifest.xml
+++ b/2ndProj/app/src/main/AndroidManifest.xml
@@ -24,19 +24,31 @@
         <activity android:name=".start.Page4Activity" />
         <activity android:name=".start.Page3Activity" />
         <activity android:name=".start.Page2Activity" />
-        <activity android:name=".MainActivity" /> <!-- <activity android:name=".start.Page1Activity"> -->
+<!--        <activity android:name=".MainActivity" />
+
+ &lt;!&ndash; <activity android:name=".start.Page1Activity"> &ndash;&gt;-->
         <!-- <intent-filter> -->
         <!-- <action android:name="android.intent.action.MAIN" /> -->
         <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
         <!-- </intent-filter> -->
         <!-- </activity> -->
-        <activity android:name=".start.Page1Activity">
+
+<!--        <activity android:name=".start.Page1Activity">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
     </application>
 
 </manifest>
