--- a/2ndProj/app/src/main/AndroidManifest.xml
+++ b/2ndProj/app/src/main/AndroidManifest.xml
@@ -32,25 +32,25 @@
         <activity android:name=".start.activity.AccountGetDataActivity" />
 
 
-        <activity android:name=".MainActivity" />
+<!--        <activity android:name=".MainActivity" />-->
 
-                <activity android:name=".start.activity.Page1Activity">
+<!--                <activity android:name=".start.activity.Page1Activity">-->
 
-                    <intent-filter>
-                        <action android:name="android.intent.action.MAIN" />
+<!--                    <intent-filter>-->
+<!--                        <action android:name="android.intent.action.MAIN" />-->
 
-                        <category android:name="android.intent.category.LAUNCHER" />
-                    </intent-filter>
-                </activity>
+<!--                        <category android:name="android.intent.category.LAUNCHER" />-->
+<!--                    </intent-filter>-->
+<!--                </activity>-->
 
-<!--        <activity android:name=".MainActivity">-->
+        <activity android:name=".MainActivity">
 
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
