--- a/2ndProj/app/src/main/AndroidManifest.xml
+++ b/2ndProj/app/src/main/AndroidManifest.xml
@@ -15,6 +15,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <!--[START fcm_default_icon] -->
+        <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
+            See README(https://goo.gl/l4GJaQ) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/background_msg_circle_item_1" />
+        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent" />
+        <!-- [END fcm_default_icon] -->
+
+        <!--        &lt;!&ndash; [START fcm_default_channel] &ndash;&gt;-->
+        <!--        <meta-data-->
+        <!--            android:name="com.google.firebase.messaging.default_notification_channel_id"-->
+        <!--            android:value="@string/default_notification_channel_id" />-->
+        <!--        &lt;!&ndash; [END fcm_default_channel] &ndash;&gt;-->
+
+        <!--[START firebase_service] -->
+
         <activity android:name=".start.dialogue.Dialogue_select_location"
             android:theme="@style/PopUpTheme"/>
         <activity android:name=".start.dialogue.Dialogue_select_location_2"
@@ -40,6 +61,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <service
+            android:name=".FirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".FirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
 
     </application>
 
