--- a/2ndProj/app/src/main/AndroidManifest.xml
+++ b/2ndProj/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/network_security"
+        android:usesCleartextTraffic="true">
 
         <activity
             android:name=".start.dialogue.Dialogue_select_location"
@@ -32,25 +34,25 @@
         <activity android:name=".start.activity.AccountGetDataActivity" />
 
 
-<!--        <activity android:name=".MainActivity" />-->
+        <activity android:name=".MainActivity" />
 
-<!--                <activity android:name=".start.activity.Page1Activity">-->
+                <activity android:name=".start.activity.Page1Activity">
 
-<!--                    <intent-filter>-->
-<!--                        <action android:name="android.intent.action.MAIN" />-->
+                    <intent-filter>
+                        <action android:name="android.intent.action.MAIN" />
 
-<!--                        <category android:name="android.intent.category.LAUNCHER" />-->
-<!--                    </intent-filter>-->
-<!--                </activity>-->
+                        <category android:name="android.intent.category.LAUNCHER" />
+                    </intent-filter>
+                </activity>
 
-        <activity android:name=".MainActivity">
+<!--        <activity android:name=".MainActivity">-->
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
 
     </application>
 
