--- a/2ndProj/app/build.gradle
+++ b/2ndProj/app/build.gradle
@@ -93,10 +93,20 @@ dependencies {
     //밑에거 지금 안씀
     implementation 'com.github.freemmer:FMNotification:1.0.1'
     //java.lang.IllegalArgumentException: Service not registered: com.google.android.gms.measurement.internal ERROR
-    implementation 'com.google.android.gms:play-services-basement:17.4.0'
+    implementation 'com.google.android.gms:play-services-basement:17.5.0'
+
+    implementation 'com.google.android.material:material:1.3.0-alpha04'   // 스낵바 사용
+    implementation 'com.github.PhilJay:MPAndroidChart:3.1.0'   // 막대, 원 그래프 사용ar
+
+    implementation 'androidx.viewpager2:viewpager2:1.1.0-alpha01' //뷰페이저
+
+    implementation 'me.relex:circleindicator:2.1.4' // 인디게이터
+
+    //java 웹 크롤링
+    implementation 'org.jsoup:jsoup:1.11.3'
+    //xml to json
+    implementation 'com.github.smart-fun:XmlToJson:1.4.5'
 
 
-    //labeld switch
-    implementation 'com.github.angads25:toggle:1.1.0'
 }
 
